# data_structures

./: .gitignore  .gitmodules  heap.py  makefile  pyproject.toml  queue.py  singly_linked_list.cpp  stack.py  trie.py
ds_c/: README.md  _makefile_v1  array.c  hashmap.c  hashmap.h  makefile  singly_linked_list.c  singly_linked_list.h  string.c  two_sum.c
ds_c/src/: array.c  array.h  hashmap.c  hashmap.h  singly_linked_list.c  singly_linked_list.h  str.c  str.h  string.c  struct.c  two_sum.c
ds_c/test/: test_array  test_array.c
ds_c/tests/: test_array.c  test_array_generated.c  test_hashmap.c  test_singly_linked_list.c  test_str.c  test_string.c  test_struct.c
ds_cpp/: singly_linked_list.cpp
ds_python/: queue.py  trie.py
tests/: test_queue.py
